--- a/config/database_my.yml
+++ b/config/database_my.yml
@@ -12,7 +12,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: spree_stable_development
+  database: spree_development
   pool: 5
   username: root
   password: root
@@ -25,7 +25,7 @@ test:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: spree17_03_test
+  database: spree_test
   pool: 5
   username: root
   password: root
@@ -35,9 +35,8 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: spree17_03_production
+  database: spree_production
   pool: 5
   username: root
   password: root
   socket: /var/run/mysqld/mysqld.sock
-#spree1_production
